# AutoTraceCMake

./: CMakeLists.txt  UpgradeLog.htm  UpgradeLog2.htm  aclocal.m4  autotrace.c  autotrace.sln  autotrace.vcxproj  config.h  configure  configure.in  curve.c  despeckle.c  fit.c  input.c  main.c  output.c
